--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#2196F3">
-    <title>EasySMPC - share your medical data in a privacy-preserving way</title>
+    <title>EasySMPC - Share your medical data in a privacy-preserving way</title>
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
@@ -72,21 +72,22 @@
 
                 <div class="col s12 m4 l4">
                     <div class="center promo promo-example">
-                        <i class="mdi-social-group"></i>
-                        <h5 class="promo-caption">Secure & easy Data Sharing</h5>
-                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://en.wikipedia.org/wiki/Secure_multi-party_computation"> secure multiparty computation </a>.</p>
+						<i class="material-symbols-outlined">lock</i>
+                        <h5 class="promo-caption">Secure & Easy Data Sharing</h5>						
+                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://en.wikipedia.org/wiki/Secure_multi-party_computation"> secure multiparty computation </a>.
+						</p>
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
                     <div class="center promo promo-example">
-                        <i class="mdi-social-group"></i>
+						<i class="material-symbols-outlined">touch_app</i>
                         <h5 class="promo-caption">Simple Usage</h5>
                         <p class="light center">EasySMPC was designed to provide a smooth, simple and straightforward easy user experience.</p>
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
                     <div class="center promo promo-example">
-                        <i class="mdi-hardware-desktop-windows"></i>
+						<i class="material-symbols-outlined">speed</i>
                         <h5 class="promo-caption">Fast results</h5>
                         <p class="light center">EasySMPC is easy to deploy, since no server-site installation is mandatory. The performance of the software has been evaluated guaranteeing fast results </p>
                     </div>
