--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#2196F3">
-    <title>EasySMPC - Share your medical data in a privacy-preserving way</title>
+    <title>EasySMPC - Share your biomedical data in a privacy-preserving way</title>
 
     <!-- CSS  -->
     <link href="min/plugin-min.css" type="text/css" rel="stylesheet">
@@ -57,8 +57,8 @@
             <h1 id="color" class="text_h center header cd-headline letters type">
                 <span>Share your biomedical data</span>
                 <span class="cd-words-wrapper waiting">
-                    <b class="is-visible">secure</b>
-                    <b>easy</b>
+                    <b class="is-visible">securely</b>
+                    <b>easily</b>
                     <b>fast</b>
                 </span>
             </h1>
@@ -105,14 +105,14 @@
 
                 <h5 class="header col s12 light left-align">EasySMPC is an open-source solution to share biomedical data
                     in a privacy-preserving way. You need to install the EasySMPC client and choose between manual,
-                    e-mail or dedicated backend-mode. For the latter, you can register at this server or set up your
+                    e-mail or dedicated backend-mode. For the latter, you can apply for access to a test server by sending an e-mail or set up your
                     own server.</h5>
             </div>
             <div class="row center py-10">
                 <a href="https://github.com/prasser/easy-smpc/releases" id="download-button"
                     class="btn-large waves-effect waves-light blue btnM">Download client</a>
-                <a href="https://github.com/prasser/easy-smpc/releases" id="register-button"
-                    class="btn-large waves-effect waves-light blue btnM">Register here</a>
+                <a href="mailto:easysmpc@insutec.de?subject=Acces to test server" id="apply-button"
+                    class="btn-large waves-effect waves-light blue btnM">Apply here</a>
                 <a href="https://github.com/fnwirth/easy-backend" id="setup-button"
                     class="btn-large waves-effect waves-light blue btnM">Setup own server</a>
             </div>
@@ -131,7 +131,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="black-text" href="mailto:mail@box.org">
+                    <a class="black-text" href="mailto:easysmpc@insutec.de">
                         <i class="mdi-communication-email small blue-text px:7"></i>mail@box.org
                     </a>
                 </li>
@@ -147,11 +147,8 @@
             <ul class="collection">
                 <li class="collection-item avatar imprintLi">
                     <img src="img/gavel.png" alt="" class="circle">
-                    <p>First name last name<br>
-                        mail@box.org<br>
-                        Telephone number<br>
-                        Address<br>
-                        Country<br>
+                    <p>                    
+                        <img src="img/imprint.png" alt="">
                     </p>
                 </li>
             </ul>
