--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav id="nav_f" class="default_color" role="navigation">
             <div class="container1">
                 <a href="#" id="logo-container" class="brand-logo">
-                    <img src="PNG-2.png" />
+                    <img src="img/logo.png" />
                 </a>
                 <div></div>
                 <ul class="right hide-on-med-and-down menu">
@@ -140,7 +140,7 @@
                 </li>
                 <li>
                     <a class="black-text" href="mailto:easysmpc@insutec.de">
-                        <i class="mdi-communication-email small blue-text px:7"></i>mail@box.org
+                        <i class="mdi-communication-email small blue-text px:7"></i>easysmpc@insutec.de
                     </a>
                 </li>
             </ul>
