Add link to eval

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="center promo promo-example">
 						<i class="material-symbols-outlined">speed</i>
                         <h5 class="promo-caption">Fast results</h5>
-                        <p class="light center">EasySMPC is easy to deploy, since no server-site installation is mandatory. The performance of the software has been evaluated guaranteeing fast results </p>
+                        <p class="light center">EasySMPC is easy to deploy, since no server-site installation is mandatory. The performance of the software has been <a href="https://github.com/fnwirth/easy-smpc-performance-evaluation">evaluated</a> guaranteeing fast results </p>
                     </div>
                 </div>
             </div>
