--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <li class="collection-item avatar imprintLi">
                     <img src="img/gavel.png" alt="" class="circle">
                     <p>                    
-                        <img src="img/imprint.png" alt="">
+                        <img class="responsive-img" src="img/imprint.png" width="220">                        
                     </p>
                 </li>
             </ul>
