--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#publication">Publication</a></li>
                     <li><a href="#imprint">Imprint</a></li>
-                    <li><a href="#ppolicy">Privacy policy</a></li>
-                    <li><a href="https://github.com/prasser/easy-smpc" target="_blank">Get it</a></li>
+                    <li><a href="#ppolicy">Privacy Policy</a></li>
+                    <li><a href="https://github.com/prasser/easy-smpc/releases" target="_blank">Get It</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav menu">
                     <li><a href="#intro">Start</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#publication">Publication</a></li>
                     <li><a href="#imprint">Imprint</a></li>
-                    <li><a href="#ppolicy">Privacy policy</a></li>
-                    <li><a href="https://github.com/prasser/easy-smpc" target="_blank">Get it</a></li>
+                    <li><a href="#ppolicy">Privacy Policy</a></li>
+                    <li><a href="https://github.com/prasser/easy-smpc/releases" target="_blank">Get It</a></li>
                 </ul>
                 <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -76,7 +76,7 @@
                     <div class="center promo promo-example">
 						<i class="material-symbols-outlined">lock</i>
                         <h5 class="promo-caption">Secure & Easy Data Sharing</h5>						
-                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://en.wikipedia.org/wiki/Secure_multi-party_computation"> secure multiparty computation </a>.
+                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://en.wikipedia.org/wiki/Secure_multi-party_computation"  target="_blank"> secure multiparty computation</a>.
 						</p>
                     </div>
                 </div>
@@ -84,14 +84,14 @@
                     <div class="center promo promo-example">
 						<i class="material-symbols-outlined">touch_app</i>
                         <h5 class="promo-caption">Simple Usage</h5>
-                        <p class="light center">EasySMPC was designed to provide a smooth, simple and straightforward easy user experience.</p>
+                        <p class="light center">EasySMPC was designed to provide a smooth, simple and straightforward user experience.</p>
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
                     <div class="center promo promo-example">
 						<i class="material-symbols-outlined">speed</i>
-                        <h5 class="promo-caption">Fast results</h5>
-                        <p class="light center">EasySMPC is easy to deploy, since no server-site installation is mandatory. The performance of the software has been <a href="https://github.com/fnwirth/easy-smpc-performance-evaluation">evaluated</a> guaranteeing fast results </p>
+                        <h5 class="promo-caption">Fast Results</h5>
+                        <p class="light center">EasySMPC is easy to deploy, since no server-site installation is mandatory. The performance of the software has been <a href="https://github.com/fnwirth/easy-smpc-performance-evaluation" target=”_blank”>evaluated</a> guaranteeing fast results.</p>
                     </div>
                 </div>
             </div>
@@ -106,16 +106,15 @@
             <div class="row center">
 
                 <h5 class="header col s12 light left-align">EasySMPC is an open-source solution to share biomedical data
-                    in a privacy-preserving way. You need to install the EasySMPC client and choose between manual,
-                    e-mail or dedicated backend-mode. For the latter, you can apply for access to a test server by sending an e-mail or set up your
-                    own server.</h5>
+                    in a privacy-preserving way. You need to install the EasySMPC client and choose between manual, e-mail or dedicated backend-mode.
+                    For the latter, you can apply for access to a test server by sending an e-mail or set up your own server.</h5>
             </div>
             <div class="row center py-10">
-                <a href="https://github.com/prasser/easy-smpc/releases" id="download-button"
+                <a href="https://github.com/prasser/easy-smpc/releases" target=”_blank” id="download-button"
                     class="btn-large waves-effect waves-light blue btnM">Download client</a>
                 <a href="mailto:easysmpc@insutec.de?subject=Acces to test server" id="apply-button"
                     class="btn-large waves-effect waves-light blue btnM">Apply here</a>
-                <a href="https://github.com/fnwirth/easy-backend" id="setup-button"
+                <a href="https://github.com/fnwirth/easy-backend" target=”_blank” id="setup-button"
                     class="btn-large waves-effect waves-light blue btnM">Setup own server</a>
             </div>
             <br><br>
@@ -126,7 +125,7 @@
     <div id="publication" class="section scrollspy">
         <div class="container">
             <h4 class="header col s12 light blue-text left-align">Publication</h4>
-            <p> A paper about EasySMPC will be published soon </p>
+            <p> A paper about EasySMPC will be published soon.</p>
         </div>
     </div>
 
@@ -266,7 +265,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                Website made thanks to <a class="white-text" href="http://joashpereira.com">Joash Pereira</a> and <a class="white-text" href="http://materializecss.com/">materializecss</a>
+                Website made thanks to <a class="white-text" href="http://joashpereira.com" target="_blank">Joash Pereira</a> and <a class="white-text" href="http://materializecss.com/" target="_blank">materializecss</a>
             </div>
         </div>
     </footer>
