--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="center promo promo-example">
 						<i class="material-symbols-outlined">lock</i>
                         <h5 class="promo-caption">Secure & Easy Data Sharing</h5>						
-                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://en.wikipedia.org/wiki/Secure_multi-party_computation"  target="_blank"> secure multiparty computation</a>.
+                        <p class="light center">EasySMPC allows to create common sums of data without sharing the single summands by using <a href="https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-022-05044-8#Sec4"  target="_blank"> secure multiparty computation</a>.
 						</p>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
     <div id="publication" class="section scrollspy">
         <div class="container">
             <h4 class="header col s12 light blue-text left-align">Publication</h4>
-            <p> A paper about EasySMPC will be published soon.</p>
+            <p> A <a href="https://doi.org/10.1186/s12859-022-05044-8" target=”_blank”>paper</a> about EasySMPC has been published in the journal BMC Bioinformatics.</p>
         </div>
     </div>
 
